create small lc to test

--- a/notebooks/sort_data.ipynb
+++ b/notebooks/sort_data.ipynb
@@ -168,6 +168,27 @@
     "    FILE = IDX_SORT / f\"idx_sort_{qtd}.csv\"\n",
     "    pd.DataFrame(idx_sort).to_csv(FILE, index=False, header=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create lc with the points sorted by"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for qtd in lis_num_sort:\n",
+    "    FILE = IDX_SORT / f\"idx_sort_{qtd}.csv\"\n",
+    "    idx_sort = pd.read_csv(FILE, header=None).values.flatten()\n",
+    "    lc_reduced = kepler_37.iloc[idx_sort]\n",
+    "    LC_REDUCED = DATA / \"LC_REDUCED\"\n",
+    "    pd.DataFrame(lc_reduced).to_csv(LC_REDUCED / f\"lc_reduced_{qtd}.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
