--- a/notebooks/new_bls.ipynb
+++ b/notebooks/new_bls.ipynb
@@ -99,6 +99,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def bls(time, flux, flux_err, periods, durations):\n",
+    "    best_period = None\n",
+    "    best_phase = None\n",
+    "    best_D = np.inf\n",
+    "    best_indices = None\n",
+    "\n",
+    "    for period in periods:\n",
+    "        for duration in durations:\n",
+    "            for phase in np.linspace(0, period, int(period / duration)):\n",
+    "                r = duration / period\n",
+    "                weights = 1 / flux_err**2\n",
+    "                x = flux - np.mean(flux)\n",
+    "                \n",
+    "                in_transit = (time % period >= phase) & (time % period < phase + duration)\n",
+    "                s = np.sum(weights[in_transit] * x[in_transit])\n",
+    "                \n",
+    "                D = np.sum(weights[in_transit] * x[in_transit]**2) - (s**2 / (r * (1 - r)))\n",
+    "                \n",
+    "                if D < best_D:\n",
+    "                    best_D = D\n",
+    "                    best_period = period\n",
+    "                    best_phase = phase\n",
+    "                    best_indices = np.where(in_transit)\n",
+    "    \n",
+    "    return best_period, best_phase, best_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "periods = np.linspace(15,25,100)\n",
     "duration = np.linspace(0.01, 0.2, 100)"
    ]
