--- a/notebooks/new_bls.ipynb
+++ b/notebooks/new_bls.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bls(time, flux, flux_err, periods, durations):\n",
+    "def bls(time, flux, flux_err, periods, durations, num_bins=200):\n",
     "    best_period = None\n",
     "    best_phase = None\n",
     "    best_D = np.inf\n",
@@ -112,16 +112,32 @@
     "                weights = 1 / flux_err**2\n",
     "                x = flux - np.mean(flux)\n",
     "                \n",
-    "                in_transit = (time % period >= phase) & (time % period < phase + duration)\n",
-    "                s = np.sum(weights[in_transit] * x[in_transit])\n",
+    "                # Bin the folded time series\n",
+    "                folded_time = (time % period) - phase\n",
+    "                folded_time[folded_time < 0] += period  # Ensure all times are positive\n",
+    "                binned_time = np.linspace(0, period, num_bins)\n",
+    "                bin_indices = np.digitize(folded_time, binned_time) - 1\n",
     "                \n",
-    "                D = np.sum(weights[in_transit] * x[in_transit]**2) - (s**2 / (r * (1 - r)))\n",
+    "                bin_sums = np.zeros(num_bins)\n",
+    "                bin_weights = np.zeros(num_bins)\n",
+    "                bin_fluxes = np.zeros(num_bins)\n",
+    "                \n",
+    "                for i in range(num_bins):\n",
+    "                    bin_mask = (bin_indices == i)\n",
+    "                    bin_sums[i] = np.sum(weights[bin_mask] * x[bin_mask])\n",
+    "                    bin_weights[i] = np.sum(weights[bin_mask])\n",
+    "                    bin_fluxes[i] = np.sum(weights[bin_mask] * x[bin_mask]**2)\n",
+    "                \n",
+    "                # Calculate the BLS statistic\n",
+    "                in_transit_bins = (binned_time >= 0) & (binned_time < duration)\n",
+    "                s = np.sum(bin_sums[in_transit_bins])\n",
+    "                D = np.sum(bin_fluxes[in_transit_bins]) - (s**2 / (r * (1 - r)))\n",
     "                \n",
     "                if D < best_D:\n",
     "                    best_D = D\n",
     "                    best_period = period\n",
     "                    best_phase = phase\n",
-    "                    best_indices = np.where(in_transit)\n",
+    "                    best_indices = np.where(in_transit_bins[bin_indices])\n",
     "    \n",
     "    return best_period, best_phase, best_indices"
    ]
