--- a/notebooks/new_bls.ipynb
+++ b/notebooks/new_bls.ipynb
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import auto_max_min_period, autoperiod"
+    "from utils import auto_max_min_period, autoperiod, autophase"
    ]
   },
   {
@@ -176,52 +176,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def new_bls(t, y, dy):\n",
-    "\n",
-    "    def normalize(y):\n",
-    "        y -= np.mean(y)\n",
-    "        y /= np.std(y)\n",
-    "        return y\n",
-    "\n",
-    "    def autophase(period, duration):\n",
-    "        return np.arange(0, period, period / duration)\n",
-    "\n",
-    "    def model(t, y, w, p, d, phi):\n",
-    "        trel = t - np.min(t)\n",
-    "        is_transit = (np.fmod(trel, p) >= phi) & (np.fmod(trel, p) <= phi + d)\n",
-    "        r = np.sum(w * is_transit)\n",
-    "        s = np.sum(w * y * is_transit)\n",
-    "        wx = np.sum(w * y * y)\n",
-    "\n",
-    "        # if r * (1 - r) == 0:\n",
-    "        #     return np.inf\n",
-    "\n",
-    "        return wx - (s**2) / (r * (1 - r) + sys.float_info.epsilon)\n",
-    "\n",
-    "    w = 1.0 / dy**2\n",
-    "    assert np.fabs(np.sum(w)) > sys.float_info.epsilon\n",
-    "    w = w / np.sum(w)\n",
-    "\n",
-    "    y = normalize(y)\n",
-    "\n",
-    "    best_d = np.inf\n",
-    "    best_period = None\n",
-    "    best_phi = None\n",
-    "\n",
+    "def spec_generator(t):\n",
     "    periods = autoperiod(*auto_max_min_period(t))\n",
-    "    periods = np.linspace(10, 30, 500)\n",
     "    for p in tqdm(periods):\n",
     "        durations = np.linspace(0.01, 0.05, 50) * p\n",
     "        for d in durations:\n",
     "            phase = autophase(period=p, duration=d)\n",
     "            for phi in phase:\n",
-    "                d_value = model(t, y, w, p, d, phi)\n",
-    "                if d_value < best_d:\n",
-    "                    best_d = d_value\n",
-    "                    best_period = p\n",
-    "                    best_phi = phi\n",
+    "                yield p, d, phi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numba import njit, cuda, jit\n",
     "\n",
-    "    return best_period, best_phi, best_d"
+    "\n",
+    "def compute_trel(t):\n",
+    "    trel = t - np.min(t)\n",
+    "    return trel\n",
+    "\n",
+    "\n",
+    "def normalize(y):\n",
+    "    y -= np.mean(y)\n",
+    "    y /= (np.std(y) + sys.float_info.epsilon)\n",
+    "    return y\n",
+    "\n",
+    "\n",
+    "def compute_weights(dy):\n",
+    "    w = 1.0 / dy**2\n",
+    "    assert np.fabs(np.sum(w)) > sys.float_info.epsilon\n",
+    "    w = w / np.sum(w)\n",
+    "    return w\n",
+    "\n",
+    "\n",
+    "@njit(parallel=True)\n",
+    "def model(trel, y, w, period, duration, phase):\n",
+    "    is_transit = \\\n",
+    "        (np.fmod(trel, period) >= phase) & \\\n",
+    "        (np.fmod(trel, period) <= phase + duration)\n",
+    "    r = np.sum(w * is_transit)\n",
+    "    s = np.sum(w * y * is_transit)\n",
+    "    wx = np.sum(w * y * y)\n",
+    "    d_value = wx - (s**2) / (r * (1 - r) + np.finfo(np.float64).eps)\n",
+    "    return d_value\n",
+    "\n",
+    "\n",
+    "def new_bls(t, y, dy, spec_generator):\n",
+    "    trel = compute_trel(t)\n",
+    "    y = normalize(y)\n",
+    "    w = compute_weights(dy)\n",
+    "\n",
+    "    best_d_value = np.inf\n",
+    "    best_period = None\n",
+    "    best_duration = None\n",
+    "    best_phase = None\n",
+    "\n",
+    "    for period, duration, phase in tqdm(spec_generator):\n",
+    "        d_value = model(trel, y, w, period, duration, phase)\n",
+    "\n",
+    "        if d_value < best_d_value:\n",
+    "            best_d_value = d_value\n",
+    "            best_period = period\n",
+    "            best_duration = duration\n",
+    "            best_phase = phase\n",
+    "\n",
+    "    return best_period, best_duration, best_phase, best_d_value"
    ]
   },
   {
@@ -251,7 +274,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(t, y)"
+    "def spec_gen_gambiarra():\n",
+    "    for p in np.linspace(45, 55, 101):\n",
+    "        for d in np.linspace(1, 11, 11):\n",
+    "            for phi in np.arange(0, p, 0.5):\n",
+    "                yield p, d, phi"
    ]
   },
   {
@@ -260,7 +287,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "period, phi, d = new_bls(t, y, dy)"
+    "# spec_gen = spec_generator(t)\n",
+    "spec_gen = spec_gen_gambiarra()\n",
+    "best_period, best_duration, best_phase, best_d_value = new_bls(t, y, dy, spec_gen)"
    ]
   },
   {
@@ -269,137 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "period, phi, d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def old_bls(time, flux, flux_err, periods, durations):\n",
-    "    best_period = None\n",
-    "    best_phase = None\n",
-    "    best_D = np.inf\n",
-    "    best_indices = None\n",
-    "    \n",
-    "    # time = np.array(time)\n",
-    "    # flux = np.array(flux)\n",
-    "    # flux_err = np.array(flux_err)\n",
-    "    \n",
-    "    weights = 1 / flux_err**2\n",
-    "    weights /= np.sum(weights)\n",
-    "    x = flux - np.mean(flux)\n",
-    "    x /= np.std(x)\n",
-    "    wx = np.sum(np.multiply(weights, np.multiply(x, x)))\n",
-    "\n",
-    "    for period in periods:\n",
-    "        for duration in durations:\n",
-    "            for phase in np.linspace(0, period, int(period / duration)):\n",
-    "                in_transit = (time % period >= phase) & (time % period < phase + duration)\n",
-    "                r = np.sum(weights[in_transit])\n",
-    "                if r == 0 or r == 1:\n",
-    "                    continue\n",
-    "                s = np.sum(weights[in_transit] * x[in_transit])\n",
-    "                \n",
-    "                D = wx - (s**2 / (r * (1 - r)))\n",
-    "                \n",
-    "                if D < best_D:\n",
-    "                    best_D = D\n",
-    "                    best_period = period\n",
-    "                    best_phase = phase\n",
-    "                    best_indices = np.where(in_transit)\n",
-    "    \n",
-    "    return best_period, best_phase, best_indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_period, best_phase, best_indices = old_bls(t, y, dy, periods, durations)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def bls(time, flux, flux_err, periods, durations, num_bins=200):\n",
-    "    best_period = None\n",
-    "    best_phase = None\n",
-    "    best_D = np.inf\n",
-    "    best_indices = None\n",
-    "\n",
-    "    for period in periods:\n",
-    "        for duration in durations:\n",
-    "            for phase in np.linspace(0, period, int(period / duration)):\n",
-    "                r = duration / period\n",
-    "                weights = 1 / flux_err**2\n",
-    "                x = flux - np.mean(flux)\n",
-    "                \n",
-    "                # Bin the folded time series\n",
-    "                folded_time = (time % period) - phase\n",
-    "                folded_time[folded_time < 0] += period  # Ensure all times are positive\n",
-    "                binned_time = np.linspace(0, period, num_bins)\n",
-    "                bin_indices = np.digitize(folded_time, binned_time) - 1\n",
-    "                \n",
-    "                bin_sums = np.zeros(num_bins)\n",
-    "                bin_weights = np.zeros(num_bins)\n",
-    "                bin_fluxes = np.zeros(num_bins)\n",
-    "                \n",
-    "                for i in range(num_bins):\n",
-    "                    bin_mask = (bin_indices == i)\n",
-    "                    bin_sums[i] = np.sum(weights[bin_mask] * x[bin_mask])\n",
-    "                    bin_weights[i] = np.sum(weights[bin_mask])\n",
-    "                    bin_fluxes[i] = np.sum(weights[bin_mask] * x[bin_mask]**2)\n",
-    "                \n",
-    "                # Calculate the BLS statistic\n",
-    "                in_transit_bins = (binned_time >= 0) & (binned_time < duration)\n",
-    "                s = np.sum(bin_sums[in_transit_bins])\n",
-    "                D = np.sum(bin_fluxes[in_transit_bins]) - (s**2 / (r * (1 - r)))\n",
-    "                \n",
-    "                if D < best_D:\n",
-    "                    best_D = D\n",
-    "                    best_period = period\n",
-    "                    best_phase = phase\n",
-    "                    best_indices = np.where(in_transit_bins[bin_indices])\n",
-    "    \n",
-    "    return best_period, best_phase, best_indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "periods = np.linspace(15,25,100)\n",
-    "duration = np.linspace(0.01, 0.2, 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_period, best_phase, best_indices = bls(df.time, df.flux, df.flux_err, periods, duration)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"Best period: {best_period}\")\n",
-    "print(f\"Best phase: {best_phase}\")\n",
-    "print(f\"Indices: {best_indices}\")"
+    "best_period, best_duration, best_phase, best_d_value"
    ]
   }
  ],
