torch version works now

--- a/notebooks/new_bls.ipynb
+++ b/notebooks/new_bls.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "# All guesses.\n",
-    "years = 8 \n",
+    "years = 8\n",
     "sample_interval_min = 5\n",
     "pixels_per_sample = 10 * 10\n",
     "bytes_per_pixel = 4\n",
@@ -128,7 +128,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import auto_max_min_period, autoperiod, autophase"
+    "real_period = 50\n",
+    "real_phase = 5\n",
+    "real_duration = 0.1 * real_period\n",
+    "real_diff = 0.05\n",
+    "\n",
+    "threshold = np.cos(np.pi * real_duration / real_period)\n",
+    "\n",
+    "t = np.linspace(0, 400, 4000)\n",
+    "y = (np.cos(2.0 * np.pi \\\n",
+    "        * (t - real_phase - real_duration / 2.0) / real_period) > threshold) \\\n",
+    "    .astype(float)\n",
+    "y = 1.0 - real_diff * y\n",
+    "dy = 0.01 * np.ones(t.shape)"
    ]
   },
   {
@@ -137,26 +149,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "minimum_period, maximum_period, total_duration = auto_max_min_period(t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "minimum_period, maximum_period, total_duration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from utils import auto_max_min_period, autoperiod, autophase\n",
+    "\n",
+    "minimum_period, maximum_period, total_duration = auto_max_min_period(t)\n",
     "periods = autoperiod(minimum_period, maximum_period, total_duration)\n",
-    "print(len(periods))"
+    "\n",
+    "print(minimum_period, maximum_period, total_duration, len(periods))"
    ]
   },
   {
@@ -183,16 +181,14 @@
     "        for d in durations:\n",
     "            phase = autophase(period=p, duration=d)\n",
     "            for phi in phase:\n",
-    "                yield p, d, phi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from numba import njit, cuda, jit\n",
+    "                yield p, d, phi\n",
+    "\n",
+    "\n",
+    "def spec_gen_gambiarra():\n",
+    "    for p in tqdm(np.linspace(45, 55, 101)):\n",
+    "        for d in np.linspace(1, 11, 11):\n",
+    "            for phi in np.arange(0, p, 0.5):\n",
+    "                yield p, d, phi\n",
     "\n",
     "\n",
     "def compute_trel(t):\n",
@@ -210,7 +206,16 @@
     "    w = 1.0 / dy**2\n",
     "    assert np.fabs(np.sum(w)) > sys.float_info.epsilon\n",
     "    w = w / np.sum(w)\n",
-    "    return w\n",
+    "    return w\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numba import cuda, jit, njit\n",
     "\n",
     "\n",
     "@njit(parallel=True)\n",
@@ -235,7 +240,7 @@
     "    best_duration = None\n",
     "    best_phase = None\n",
     "\n",
-    "    for period, duration, phase in tqdm(spec_generator):\n",
+    "    for period, duration, phase in spec_generator:\n",
     "        d_value = model(trel, y, w, period, duration, phase)\n",
     "\n",
     "        if d_value < best_d_value:\n",
@@ -253,32 +258,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_period = 50\n",
-    "real_phase = 5\n",
-    "real_duration = 0.1 * real_period\n",
-    "real_diff = 0.05\n",
+    "import torch\n",
     "\n",
-    "threshold = np.cos(np.pi * real_duration / real_period)\n",
     "\n",
-    "t = np.linspace(0, 400, 4000)\n",
-    "y = (np.cos(2.0 * np.pi \\\n",
-    "        * (t - real_phase - real_duration / 2.0) / real_period) > threshold) \\\n",
-    "    .astype(float)\n",
-    "y = 1.0 - real_diff * y\n",
-    "dy = 0.01 * np.ones(t.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def spec_gen_gambiarra():\n",
-    "    for p in np.linspace(45, 55, 101):\n",
-    "        for d in np.linspace(1, 11, 11):\n",
-    "            for phi in np.arange(0, p, 0.5):\n",
-    "                yield p, d, phi"
+    "@torch.no_grad()\n",
+    "def model_torch(trel, y, w, period, duration, phase):\n",
+    "    is_transit = \\\n",
+    "        (torch.remainder(trel, period) >= phase) & \\\n",
+    "        (torch.remainder(trel, period) <= phase + duration)\n",
+    "    r = torch.sum(w * is_transit, axis=1)\n",
+    "    s = torch.sum(w * y * is_transit, axis=1)\n",
+    "    wx = torch.sum(w * y * y, axis=1)\n",
+    "    d_value = wx - (s**2) / (r * (1 - r) + torch.finfo(torch.float64).eps)\n",
+    "    return d_value\n",
+    "\n",
+    "\n",
+    "@torch.no_grad()\n",
+    "def new_bls_torch(t, y, dy, spec_generator):\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "    trel = torch.tensor(compute_trel(t), device=device).reshape(1, -1)\n",
+    "    y = torch.tensor(normalize(y), device=device).reshape(1, -1)\n",
+    "    w = torch.tensor(compute_weights(dy), device=device).reshape(1, -1)\n",
+    "\n",
+    "    best_d_value = np.inf\n",
+    "    best_period = None\n",
+    "    best_duration = None\n",
+    "    best_phase = None\n",
+    "\n",
+    "    batch_size = 49152\n",
+    "\n",
+    "    periods = []\n",
+    "    durations = []\n",
+    "    phases = []\n",
+    "\n",
+    "    for k, (period, duration, phase) in enumerate(spec_generator):\n",
+    "        periods.append(period)\n",
+    "        durations.append(duration)\n",
+    "        phases.append(phase)\n",
+    "\n",
+    "        if (k + 1) % batch_size == 0:\n",
+    "            periods = torch.tensor(periods, device=device).reshape(-1, 1)\n",
+    "            durations = torch.tensor(durations, device=device).reshape(-1, 1)\n",
+    "            phases = torch.tensor(phases, device=device).reshape(-1, 1)\n",
+    "\n",
+    "            d_value = model_torch(trel, y, w, periods, durations, phases)\n",
+    "\n",
+    "            d_value, d_value_index = torch.min(d_value, dim=0)\n",
+    "\n",
+    "            if d_value < best_d_value:\n",
+    "                best_d_value = d_value.item()\n",
+    "                best_period = periods[d_value_index].item()\n",
+    "                best_duration = durations[d_value_index].item()\n",
+    "                best_phase = phases[d_value_index].item()\n",
+    "\n",
+    "            periods = []\n",
+    "            durations = []\n",
+    "            phases = []\n",
+    "\n",
+    "    return best_period, best_duration, best_phase, best_d_value"
    ]
   },
   {
@@ -289,7 +327,29 @@
    "source": [
     "# spec_gen = spec_generator(t)\n",
     "spec_gen = spec_gen_gambiarra()\n",
-    "best_period, best_duration, best_phase, best_d_value = new_bls(t, y, dy, spec_gen)"
+    "best_period, best_duration, best_phase, best_d_value = \\\n",
+    "    new_bls_torch(t, y, dy, spec_gen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_period, best_duration, best_phase, best_d_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spec_gen = spec_generator(t)\n",
+    "spec_gen = spec_gen_gambiarra()\n",
+    "best_period, best_duration, best_phase, best_d_value = \\\n",
+    "    new_bls(t, y, dy, spec_gen)"
    ]
   },
   {
